// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link 1`] = `
<DocumentFragment>
  <a
    class="normal"
    href="http://www.facebook.com"
  >
    Facebook
  </a>
</DocumentFragment>
`;

exports[`Link 2`] = `
<DocumentFragment>
  <a
    class="hovered"
    href="http://www.facebook.com"
  >
    Facebook
  </a>
</DocumentFragment>
`;

exports[`Link 3`] = `
<DocumentFragment>
  <a
    class="normal"
    href="http://www.facebook.com"
  >
    Facebook
  </a>
</DocumentFragment>
`;
